syntax = "proto3";

package mpc.v1;

option go_package = "github.com/kashguard/go-mpc-wallet/internal/pb";

// MPC核心服务定义
service MPCNode {
  // 双向流：加入签名会话
  rpc JoinSigningSession(stream SessionMessage) returns (stream SessionMessage);

  // 提交签名分片
  rpc SubmitSignatureShare(ShareRequest) returns (ShareResponse);

  // 心跳检测
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

service MPCCoordinator {
  // 创建签名会话
  rpc CreateSigningSession(CreateSessionRequest) returns (CreateSessionResponse);

  // 获取会话状态
  rpc GetSessionStatus(SessionStatusRequest) returns (SessionStatusResponse);

  // 聚合签名
  rpc AggregateSignatures(AggregateRequest) returns (AggregateResponse);
}

// 基础消息类型

// 会话相关消息
message CreateSessionRequest {
  string key_id = 1;
  bytes message = 2;
  string protocol = 3;  // "gg18", "gg20", "frost"
  int32 timeout_seconds = 4;
  repeated string participant_nodes = 5;
}

message CreateSessionResponse {
  string session_id = 1;
  string status = 2;
  int32 threshold = 3;
  int32 total_nodes = 4;
  repeated string participating_nodes = 5;
  string created_at = 6;
  string expires_at = 7;
}

message SessionStatusRequest {
  string session_id = 1;
}

message SessionStatusResponse {
  string session_id = 1;
  string status = 2;
  int32 current_round = 3;
  int32 total_rounds = 4;
  repeated string participating_nodes = 5;
  string signature = 6;  // hex encoded
  string created_at = 7;
  string completed_at = 8;
  int32 duration_ms = 9;
}

// 签名分片相关消息
message ShareRequest {
  string session_id = 1;
  string node_id = 2;
  bytes share_data = 3;
  int32 round = 4;
  string timestamp = 5;
}

message ShareResponse {
  bool accepted = 1;
  string message = 2;
  int32 next_round = 3;
}

// 签名聚合相关消息
message AggregateRequest {
  string session_id = 1;
}

message AggregateResponse {
  bool success = 1;
  string signature = 2;  // hex encoded
  string public_key = 3; // hex encoded
  string message_hash = 4;
  string aggregated_at = 5;
}

// 双向流消息
message SessionMessage {
  oneof message_type {
    // 客户端 -> 服务端
    JoinRequest join_request = 1;
    ShareMessage share_message = 2;
    HeartbeatRequest heartbeat_request = 3;

    // 服务端 -> 客户端
    SessionConfirmation confirmation = 4;
    RoundMessage round_message = 5;
    CompletionMessage completion_message = 6;
    ErrorMessage error_message = 7;
  }
}

message JoinRequest {
  string session_id = 1;
  string node_id = 2;
  string joined_at = 3;
}

message ShareMessage {
  bytes share_data = 1;
  int32 round = 2;
  string submitted_at = 3;
}

message SessionConfirmation {
  string session_id = 1;
  string status = 2;
  int32 threshold = 3;
  int32 total_nodes = 4;
  repeated string participants = 5;
  int32 current_round = 6;
  string confirmed_at = 7;
}

message RoundMessage {
  int32 round = 1;
  string round_type = 2;  // "dkg", "sign"
  bytes message_data = 3;
  repeated string target_nodes = 4;
  string sent_at = 5;
}

message CompletionMessage {
  string signature = 1;
  string public_key = 2;
  string completed_at = 6;
}

message ErrorMessage {
  string error_code = 1;
  string error_message = 2;
  bool recoverable = 3;
  string occurred_at = 4;
}

// 心跳消息
message HeartbeatRequest {
  string node_id = 1;
  string sent_at = 2;
  map<string, string> status_info = 3;
}

message HeartbeatResponse {
  bool alive = 1;
  string coordinator_id = 2;
  string received_at = 3;
  map<string, string> instructions = 4;
}
