package api

import (
	"context"
	"database/sql"
	"fmt"
	"testing"
	"time"

	"github.com/dropbox/godropbox/time2"
	"github.com/kashguard/go-mpc-wallet/internal/auth"
	"github.com/kashguard/go-mpc-wallet/internal/config"
	"github.com/kashguard/go-mpc-wallet/internal/i18n"
	"github.com/kashguard/go-mpc-wallet/internal/mailer"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/coordinator"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/discovery"
	mpcgrpc "github.com/kashguard/go-mpc-wallet/internal/mpc/grpc"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/key"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/node"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/participant"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/protocol"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/session"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/signing"
	"github.com/kashguard/go-mpc-wallet/internal/mpc/storage"
	"github.com/kashguard/go-mpc-wallet/internal/persistence"
	"github.com/kashguard/go-mpc-wallet/internal/push"
	"github.com/kashguard/go-mpc-wallet/internal/push/provider"
	"github.com/kashguard/tss-lib/tss"
	"github.com/redis/go-redis/v9"
	"github.com/rs/zerolog/log"
)

// PROVIDERS - define here only providers that for various reasons (e.g. cyclic dependency) can't live in their corresponding packages
// or for wrapping providers that only accept sub-configs to prevent the requirements for defining providers for sub-configs.
// https://github.com/google/wire/blob/main/docs/guide.md#defining-providers

// NewPush creates an instance of the push service and registers the configured push providers.
func NewPush(cfg config.Server, db *sql.DB) (*push.Service, error) {
	pusher := push.New(db)

	if cfg.Push.UseFCMProvider {
		fcmProvider, err := provider.NewFCM(cfg.FCMConfig)
		if err != nil {
			return nil, fmt.Errorf("failed to create FCM provider: %w", err)
		}
		pusher.RegisterProvider(fcmProvider)
	}

	if cfg.Push.UseMockProvider {
		log.Warn().Msg("Initializing mock push provider")
		mockProvider := provider.NewMock(push.ProviderTypeFCM)
		pusher.RegisterProvider(mockProvider)
	}

	if pusher.GetProviderCount() < 1 {
		log.Warn().Msg("No providers registered for push service")
	}

	return pusher, nil
}

func NewClock(t ...*testing.T) time2.Clock {
	var clock time2.Clock

	useMock := len(t) > 0 && t[0] != nil

	if useMock {
		clock = time2.NewMockClock(time.Now())
	} else {
		clock = time2.DefaultClock
	}

	return clock
}

func NewAuthService(config config.Server, db *sql.DB, clock time2.Clock) *auth.Service {
	return auth.NewService(config, db, clock)
}

func NewMailer(config config.Server) (*mailer.Mailer, error) {
	return mailer.NewWithConfig(config.Mailer, config.SMTP)
}

func NewDB(config config.Server) (*sql.DB, error) {
	return persistence.NewDB(config.Database)
}

func NewI18N(config config.Server) (*i18n.Service, error) {
	return i18n.New(config.I18n)
}

func NoTest() []*testing.T {
	return nil
}

func NewMetadataStore(db *sql.DB) storage.MetadataStore {
	return storage.NewPostgreSQLStore(db)
}

func NewRedisClient(cfg config.Server) (*redis.Client, error) {
	if cfg.MPC.RedisEndpoint == "" {
		return nil, fmt.Errorf("MPC RedisEndpoint is not configured")
	}

	client := redis.NewClient(&redis.Options{
		Addr: cfg.MPC.RedisEndpoint,
	})

	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	if err := client.Ping(ctx).Err(); err != nil {
		return nil, fmt.Errorf("failed to ping redis: %w", err)
	}

	return client, nil
}

func NewSessionStore(client *redis.Client) storage.SessionStore {
	return storage.NewRedisStore(client)
}

func NewKeyShareStorage(cfg config.Server) (storage.KeyShareStorage, error) {
	if cfg.MPC.KeyShareStoragePath == "" {
		return nil, fmt.Errorf("MPC KeyShareStoragePath is not configured")
	}
	if cfg.MPC.KeyShareEncryptionKey == "" {
		return nil, fmt.Errorf("MPC KeyShareEncryptionKey is not configured")
	}
	return storage.NewFileSystemKeyShareStorage(cfg.MPC.KeyShareStoragePath, cfg.MPC.KeyShareEncryptionKey)
}

func NewMPCGRPCClient(cfg config.Server, nodeManager *node.Manager) (*mpcgrpc.GRPCClient, error) {
	return mpcgrpc.NewGRPCClient(cfg, nodeManager)
}

func NewMPCGRPCServer(
	cfg config.Server,
	protocolEngine protocol.Engine,
	sessionManager *session.Manager,
) (*mpcgrpc.GRPCServer, error) {
	nodeID := cfg.MPC.NodeID
	if nodeID == "" {
		nodeID = "default-node"
	}
	return mpcgrpc.NewGRPCServer(cfg, protocolEngine, sessionManager, nodeID), nil
}

func NewProtocolEngine(cfg config.Server, grpcClient *mpcgrpc.GRPCClient) protocol.Engine {
	curve := "secp256k1"
	thisNodeID := cfg.MPC.NodeID
	if thisNodeID == "" {
		thisNodeID = "default-node"
	}

	// 使用真正的gRPC客户端作为消息路由器
	// 参数：sessionID（用于DKG或签名会话），nodeID（目标节点），msg（tss-lib消息）
	messageRouter := func(sessionID string, nodeID string, msg tss.Message, isBroadcast bool) error {
		ctx := context.Background()
		// 根据会话ID判断消息类型（DKG或签名）
		// 如果sessionID是keyID格式（以"key-"开头），则作为DKG消息处理
		// 否则作为签名消息处理
		if len(sessionID) > 0 && sessionID[:4] == "key-" {
			// DKG消息
			log.Error().
				Str("session_id", sessionID).
				Str("target_node_id", nodeID).
				Str("this_node_id", thisNodeID).
				Msg("Routing DKG message to target node")
			err := grpcClient.SendKeygenMessage(ctx, nodeID, msg, sessionID, isBroadcast)
			if err != nil {
				log.Error().
					Err(err).
					Str("session_id", sessionID).
					Str("target_node_id", nodeID).
					Msg("Failed to send DKG message")
			}
			return err
		} else {
			// 签名消息
			return grpcClient.SendSigningMessage(ctx, nodeID, msg, sessionID)
		}
	}

	if len(cfg.MPC.SupportedProtocols) > 0 {
		// future: switch based on protocol type
	}

	return protocol.NewGG20Protocol(curve, thisNodeID, messageRouter)
}

func NewNodeManager(metadataStore storage.MetadataStore, cfg config.Server) *node.Manager {
	heartbeat := time.Duration(cfg.MPC.SessionTimeout)
	if heartbeat <= 0 {
		heartbeat = 30
	}
	return node.NewManager(metadataStore, heartbeat*time.Second)
}

func NewNodeRegistry(manager *node.Manager) *node.Registry {
	return node.NewRegistry(manager)
}

// NewMPCDiscoveryService 创建 MPC 服务发现服务
func NewMPCDiscoveryService(cfg config.Server) (*discovery.Service, error) {
	consulClient, err := discovery.NewConsulClient(&discovery.ConsulConfig{
		Address: cfg.MPC.ConsulAddress,
		Token:   "",
	})
	if err != nil {
		return nil, fmt.Errorf("failed to create consul client: %w", err)
	}

	return discovery.NewService(consulClient), nil
}

func NewNodeDiscovery(manager *node.Manager, discoveryService *discovery.Service) *node.Discovery {
	return node.NewDiscovery(manager, discoveryService)
}

func NewSessionManager(metadataStore storage.MetadataStore, sessionStore storage.SessionStore, cfg config.Server) *session.Manager {
	timeout := time.Duration(cfg.MPC.SessionTimeout)
	if timeout <= 0 {
		timeout = 300
	}
	return session.NewManager(metadataStore, sessionStore, timeout*time.Second)
}

func NewDKGServiceProvider(
	metadataStore storage.MetadataStore,
	keyShareStorage storage.KeyShareStorage,
	protocolEngine protocol.Engine,
	nodeManager *node.Manager,
	nodeDiscovery *node.Discovery,
) *key.DKGService {
	return key.NewDKGService(metadataStore, keyShareStorage, protocolEngine, nodeManager, nodeDiscovery)
}

func NewKeyServiceProvider(
	metadataStore storage.MetadataStore,
	keyShareStorage storage.KeyShareStorage,
	protocolEngine protocol.Engine,
	dkgService *key.DKGService,
) *key.Service {
	return key.NewService(metadataStore, keyShareStorage, protocolEngine, dkgService)
}

func NewSigningServiceProvider(keyService *key.Service, protocolEngine protocol.Engine, sessionManager *session.Manager, nodeDiscovery *node.Discovery) *signing.Service {
	return signing.NewService(keyService, protocolEngine, sessionManager, nodeDiscovery)
}

func NewCoordinatorServiceProvider(
	cfg config.Server,
	keyService *key.Service,
	sessionManager *session.Manager,
	nodeDiscovery *node.Discovery,
	protocolEngine protocol.Engine,
	grpcClient *mpcgrpc.GRPCClient,
) *coordinator.Service {
	// coordinator.Service 需要 GRPCClient 接口，mpcgrpc.GRPCClient 实现了该接口
	// 记录配置的 NodeID（用于调试）
	nodeID := cfg.MPC.NodeID
	log.Error().
		Str("mpc_node_id", nodeID).
		Bool("is_empty", nodeID == "").
		Str("mpc_node_type", cfg.MPC.NodeType).
		Msg("NewCoordinatorServiceProvider: creating coordinator service with NodeID")

	return coordinator.NewService(keyService, sessionManager, nodeDiscovery, protocolEngine, grpcClient, nodeID)
}

func NewParticipantServiceProvider(cfg config.Server, keyShareStorage storage.KeyShareStorage, protocolEngine protocol.Engine) *participant.Service {
	return participant.NewService(cfg.MPC.NodeID, keyShareStorage, protocolEngine)
}

// ✅ 删除旧的 internal/grpc 相关 providers（已废弃，已统一到 internal/mpc/grpc）
// 统一使用 internal/mpc/grpc 作为唯一的 gRPC 实现
